--- a/package.json
+++ b/package.json
@@ -44,5 +44,15 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+    "include": [
+      "./src/**/*"
+    ],
+    "compilerOptions": {
+      "module": "es2015",
+      "moduleResolution": "node",
+      "target": "es5",
+      "sourceMap": true,
+      "allowJs": true
+    }
 }
