--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
@@ -45,14 +46,14 @@
     "last 2 versions",
     "not dead"
   ],
-    "include": [
-      "./src/**/*"
-    ],
-    "compilerOptions": {
-      "module": "es2015",
-      "moduleResolution": "node",
-      "target": "es5",
-      "sourceMap": true,
-      "allowJs": true
-    }
+  "include": [
+    "./src/**/*"
+  ],
+  "compilerOptions": {
+    "module": "es2015",
+    "moduleResolution": "node",
+    "target": "es5",
+    "sourceMap": true,
+    "allowJs": true
+  }
 }
